# OtusCmd

./: CMakeLists.txt  inout.h  main_control.cpp  model.h
.github/workflows/: cmake-single-platform.yml
